samples/_failures_safe/1761629996_56425d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66ef3612.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_66ef3612.c:123:5: error: expected declaration or statement at end of input
  123 |     }
      |     ^
